--- a/style/style.css
+++ b/style/style.css
@@ -1,1 +1,45 @@
+.body{
+    background-color: white;
+}
+#title{
+    display: flex;
+    background-color: rgb(255, 255, 255);
 
+    padding: 3%;
+    justify-content: space-between;
+}
+.title_option{
+    text-align: center;
+
+    border:solid 3px purple;
+    padding-right:2% ;
+    padding-left: 2%;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    border-radius: 10%;
+}
+.title_option p{
+    padding:0;
+    margin:0;
+    margin-top: 10px;
+}
+#row{
+    display: flex;
+    justify-content: space-between;
+}
+#spot{
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: aliceblue;
+    border-radius: 20%;
+    background: #ae00ff;
+    min-width: 10%;
+    aspect-ratio: 1/1;
+    margin-top: 3%;
+    margin-bottom: 2%;
+}
+.footer{
+    text-align: center;
+}
